force-app/main/default/objects/Trip__c/Trip__c.object-meta.xml
<CustomObject>
    <label>Trip</label>
    <nameField>
        <displayFormat>TRIP-{0000}</displayFormat>
        <label>Trip Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trips</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>