force-app/main/default/objects/Trip__c/fields/Start_KM__c.field-meta.xml
<CustomField>
    <fullName>Start_KM__c</fullName>
    <label>Start KM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>