force-app/main/default/objects/Trip__c/fields/Total_KM_travelled__c.field-meta.xml
<CustomField>
    <fullName>Total_KM_travelled__c</fullName>
    <formula>End_KM__c -  Start_KM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total KM travelled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>