force-app/main/default/objects/Trip__c/fields/Trip_Id__c.field-meta.xml
<CustomField>
    <fullName>Trip_Id__c</fullName>
    <label>Trip Id</label>
    <type>AutoNumber</type>
</CustomField>