force-app/main/default/objects/Trip__c/listViews/CURRENT.listView-meta.xml
<ListView>
    <fullName>CURRENT</fullName>
    <columns>NAME</columns>
    <columns>Trip_Id__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Route__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Started</value>
    </filters>
    <label>CURRENT</label>
</ListView>